--- a/packages/utiljs-files/package.json
+++ b/packages/utiljs-files/package.json
@@ -2,13 +2,13 @@
 	"author": "Chris Topher <c@creemama.com>",
 	"dependencies": {
 		"async-waterfall": "0.1.5",
-		"utiljs-objects": "0.0.0",
-		"utiljs-promises": "0.0.0",
-		"utiljs-strings": "0.0.0",
 		"mkdirp": "0.5.1",
 		"ncp": "2.0.0",
 		"rimraf": "2.6.2",
-		"touch": "3.1.0"
+		"touch": "3.1.0",
+		"utiljs-objects": "^0.1.0",
+		"utiljs-promises": "^0.1.0",
+		"utiljs-strings": "^0.1.0"
 	},
 	"description": "JavaScript Node.js utility methods for files",
 	"devDependencies": {
@@ -24,5 +24,5 @@
 	"scripts": {
 		"mocha": "mocha **/*Test.js"
 	},
-	"version": "0.0.0"
+	"version": "0.1.0"
 }
