--- a/packages/utiljs-streams/package.json
+++ b/packages/utiljs-streams/package.json
@@ -1,7 +1,7 @@
 {
 	"author": "Chris Topher <c@creemama.com>",
 	"dependencies": {
-		"utiljs-promises": "0.0.0"
+		"utiljs-promises": "^0.1.0"
 	},
 	"description": "JavaScript utility methods for streams",
 	"devDependencies": {
@@ -17,5 +17,5 @@
 	"scripts": {
 		"mocha": "mocha **/*Test.js"
 	},
-	"version": "0.0.0"
+	"version": "0.1.0"
 }
