--- a/packages/utiljs-objects/package.json
+++ b/packages/utiljs-objects/package.json
@@ -5,6 +5,13 @@
 		"chai": "4.1.2",
 		"mocha": "5.2.0"
 	},
+	"keywords": [
+		"object",
+		"objects",
+		"utilities",
+		"utility",
+		"utiljs"
+	],
 	"license": "MIT",
 	"name": "utiljs-objects",
 	"repository": {
