--- a/packages/utiljs-urls/package.json
+++ b/packages/utiljs-urls/package.json
@@ -9,6 +9,15 @@
 		"chai": "4.1.2",
 		"mocha": "5.2.0"
 	},
+	"keywords": [
+		"uri",
+		"uris",
+		"url",
+		"urls",
+		"utilities",
+		"utility",
+		"utiljs"
+	],
 	"license": "MIT",
 	"name": "utiljs-urls",
 	"repository": {
