--- a/packages/utiljs-streams/package.json
+++ b/packages/utiljs-streams/package.json
@@ -8,6 +8,10 @@
 		"chai": "4.1.2",
 		"mocha": "5.2.0"
 	},
+	"keywords": [
+		"stream",
+		"streams"
+	],
 	"license": "MIT",
 	"name": "utiljs-streams",
 	"repository": {
