--- a/packages/utiljs-strings/package.json
+++ b/packages/utiljs-strings/package.json
@@ -8,6 +8,13 @@
 		"chai": "4.1.2",
 		"mocha": "5.2.0"
 	},
+	"keywords": [
+		"string",
+		"strings",
+		"utilities",
+		"utility",
+		"utiljs"
+	],
 	"license": "MIT",
 	"name": "utiljs-strings",
 	"repository": {
