--- a/packages/utiljs-streams/package.json
+++ b/packages/utiljs-streams/package.json
@@ -10,7 +10,10 @@
 	},
 	"keywords": [
 		"stream",
-		"streams"
+		"streams",
+		"utilities",
+		"utility",
+		"utiljs"
 	],
 	"license": "MIT",
 	"name": "utiljs-streams",
