Add prettier 1.13.7 as a dev dependency to package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
 		"lerna": "2.11.0"
 	},
 	"description": "JavaScript utility methods",
+	"devDependencies": {
+		"prettier": "1.13.7"
+	},
 	"license": "MIT",
 	"name": "utiljs",
 	"repository": {
