--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "author": "Chris Topher <c@creemama.com>",
   "description": "Util.js - JavaScript utility methods",
   "devDependencies": {
+    "chai": "4.1.2",
     "lerna": "2.11.0",
+    "mocha": "5.2.0",
     "prettier": "1.13.7"
   },
   "license": "MIT",
