--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "description": "Util.js - JavaScript utility methods",
   "devDependencies": {
     "chai": "4.1.2",
+    "eslint": "5.0.1",
+    "eslint-config-prettier": "2.9.0",
     "lerna": "2.11.0",
     "mocha": "5.2.0",
     "prettier": "1.13.7"
