--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "chai": "4.1.2",
     "eslint": "5.0.1",
     "eslint-config-prettier": "2.9.0",
+    "jsdoc": "3.5.5",
     "lerna": "2.11.0",
     "mocha": "5.2.0",
     "prettier": "1.13.7"
