--- a/packages/utiljs-streams/package.json
+++ b/packages/utiljs-streams/package.json
@@ -1,12 +1,15 @@
 {
   "author": "Chris Topher <c@creemama.com>",
   "dependencies": {
-    "utiljs-promises": "0.9.0"
+    "utiljs-promises": "0.9.0",
+    "utiljs-strings": "0.11.0"
   },
   "description": "JavaScript utility methods for streams",
   "keywords": [
+    "fromString",
     "stream",
     "streams",
+    "stringify",
     "utilities",
     "utility",
     "utiljs"
