--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 # https://docs.travis-ci.com/user/languages/javascript-with-nodejs/
 
+# Do not build tags; it is redundant.
+if: tag IS blank
+
 language: node_js
 node_js:
  - '10'
