--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "eslint": "5.0.1",
     "eslint-config-prettier": "2.9.0",
     "jsdoc": "3.5.5",
+    "jsdoc-to-markdown": "4.0.1",
     "lerna": "2.11.0",
     "mocha": "5.2.0",
     "prettier": "1.13.7"
