--- a/packages/utiljs-strings/package.json
+++ b/packages/utiljs-strings/package.json
@@ -1,6 +1,7 @@
 {
   "author": "Chris Topher <c@creemama.com>",
   "dependencies": {
+    "babel-runtime": "6.26.0",
     "base64url": "3.0.0"
   },
   "description": "JavaScript utility methods for strings",
@@ -21,6 +22,10 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/creemama/utiljs/tree/master/packages/utiljs-strings"
+  },
+  "scripts": {
+    "build": "../../node_modules/.bin/babel lib --out-dir dist",
+    "prepublishOnly": "npm run build"
   },
   "version": "0.12.0"
 }
