--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "author": "Chris Topher <c@creemama.com>",
   "description": "Util.js - JavaScript utility methods",
   "devDependencies": {
+    "babel-cli": "6.26.0",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-preset-env": "1.7.0",
     "chai": "4.1.2",
     "eslint": "5.0.1",
     "eslint-config-prettier": "2.9.0",
@@ -18,6 +21,7 @@
     "url": "https://github.com/creemama/utiljs"
   },
   "scripts": {
-    "test": "npx lerna exec --ignore utiljs-timers -- mocha"
+    "build": "npx lerna exec --bail=false -- npm run build",
+    "test": "npm run build && npx lerna exec --ignore utiljs-timers -- mocha"
   }
 }
