--- a/packages/utiljs-promises/package.json
+++ b/packages/utiljs-promises/package.json
@@ -1,5 +1,8 @@
 {
   "author": "Chris Topher <c@creemama.com>",
+  "dependencies": {
+    "utiljs-arrays": "0.19.0"
+  },
   "description": "JavaScript utility methods for promises",
   "keywords": [
     "promise",
