--- a/packages/utiljs-promises/package.json
+++ b/packages/utiljs-promises/package.json
@@ -1,6 +1,7 @@
 {
   "author": "Chris Topher <c@creemama.com>",
   "dependencies": {
+    "babel-runtime": "6.26.0",
     "utiljs-arrays": "0.21.0"
   },
   "description": "JavaScript utility methods for promises",
