--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "url": "https://github.com/creemama/utiljs"
   },
   "scripts": {
-    "build": "npx lerna exec --bail=false -- npm run build",
+    "build": "npx lerna exec --bail=false --ignore \"utiljs-{emails,files,numbers,streams,timers,urls}\" -- ../../node_modules/.bin/babel lib --out-dir dist",
     "test": "npm run build && npx lerna exec --ignore utiljs-timers -- mocha"
   }
 }
