--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "scripts": {
     "build": "npx lerna exec --bail=false --ignore \"utiljs-{emails,files,numbers,streams,timers,urls}\" -- ../../node_modules/.bin/babel lib --out-dir dist",
+    "clean": "git clean -fdxn --exclude \"node_modules\"",
     "test": "npm run build && npx lerna exec --ignore utiljs-timers -- mocha"
   }
 }
