--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
   "scripts": {
     "build": "npx lerna exec --bail=false --ignore \"utiljs-{files,numbers,streams,timers,urls}\" -- ../../node_modules/.bin/babel lib --out-dir dist",
     "clean": "git clean -fdxn --exclude \"node_modules\"",
-    "test": "npm run build && npx lerna exec --ignore utiljs-timers -- mocha"
+    "test": "npm run build && npx lerna exec -- mocha"
   }
 }
