--- a/packages/utiljs-promises/package.json
+++ b/packages/utiljs-promises/package.json
@@ -2,7 +2,7 @@
   "author": "Chris Topher <c@creemama.com>",
   "dependencies": {
     "babel-runtime": "6.26.0",
-    "utiljs-arrays": "0.24.0"
+    "utiljs-arrays": "^0.28.1"
   },
   "description": "JavaScript utility methods for promises",
   "keywords": [
@@ -18,5 +18,5 @@
     "type": "git",
     "url": "https://github.com/creemama/utiljs/tree/master/packages/utiljs-promises"
   },
-  "version": "0.24.0"
+  "version": "0.28.1"
 }
