--- a/packages/utiljs-files/package.json
+++ b/packages/utiljs-files/package.json
@@ -5,9 +5,9 @@
     "ncp": "2.0.0",
     "rimraf": "2.6.3",
     "touch": "3.1.0",
-    "utiljs-objects": "0.24.0",
-    "utiljs-promises": "0.24.0",
-    "utiljs-strings": "0.24.0"
+    "utiljs-objects": "^0.28.1",
+    "utiljs-promises": "^0.28.1",
+    "utiljs-strings": "^0.28.1"
   },
   "description": "JavaScript Node.js utility methods for files",
   "devDependencies": {
@@ -28,5 +28,5 @@
     "type": "git",
     "url": "https://github.com/creemama/utiljs/tree/master/packages/utiljs-files"
   },
-  "version": "0.24.0"
+  "version": "0.28.1"
 }
