--- a/packages/utiljs-streams/package.json
+++ b/packages/utiljs-streams/package.json
@@ -1,8 +1,8 @@
 {
   "author": "Chris Topher <c@creemama.com>",
   "dependencies": {
-    "utiljs-promises": "0.24.0",
-    "utiljs-strings": "0.24.0"
+    "utiljs-promises": "^0.28.1",
+    "utiljs-strings": "^0.28.1"
   },
   "description": "JavaScript utility methods for streams",
   "keywords": [
@@ -20,5 +20,5 @@
     "type": "git",
     "url": "https://github.com/creemama/utiljs/tree/master/packages/utiljs-streams"
   },
-  "version": "0.24.0"
+  "version": "0.28.1"
 }
