--- a/packages/utiljs-arrays/package.json
+++ b/packages/utiljs-arrays/package.json
@@ -1,9 +1,13 @@
 {
   "author": "Chris Topher <c@creemama.com>",
   "dependencies": {
-    "babel-runtime": "6.26.0",
+    "@babel/runtime-corejs2": "7.3.1",
     "knuth-shuffle": "1.0.8"
   },
+  "dependencies-comments": [
+    "@babel/runtime-corejs2 is required by files in the dist directory to ",
+    "work in https://npm.runkit.com."
+  ],
   "description": "JavaScript utility methods for arrays",
   "keywords": [
     "array",
