--- a/packages/utiljs-emails/package.json
+++ b/packages/utiljs-emails/package.json
@@ -1,9 +1,13 @@
 {
   "author": "Chris Topher <c@creemama.com>",
-  "dependencies": {
-    "babel-runtime": "6.26.0"
-  },
   "description": "JavaScript utility methods for emails",
+  "dependencies": {
+    "@babel/runtime-corejs2": "7.3.1"
+  },
+  "dependencies-comments": [
+    "@babel/runtime-corejs2 is required by files in the dist directory to ",
+    "work in https://npm.runkit.com."
+  ],
   "keywords": [
     "email",
     "emails",
