--- a/packages/utiljs-numbers/package.json
+++ b/packages/utiljs-numbers/package.json
@@ -1,8 +1,12 @@
 {
   "author": "Chris Topher <c@creemama.com>",
   "dependencies": {
-    "babel-runtime": "6.26.0"
+    "@babel/runtime-corejs2": "7.3.1"
   },
+  "dependencies-comments": [
+    "@babel/runtime-corejs2 is required by files in the dist directory to ",
+    "work in https://npm.runkit.com."
+  ],
   "description": "JavaScript utility methods for numbers",
   "keywords": [
     "int",
