--- a/package.json
+++ b/package.json
@@ -23,6 +23,14 @@
   "scripts": {
     "build": "npx lerna exec --bail=false --ignore \"utiljs-{errors,files,privates,streams,timers,urls}\" -- ../../node_modules/.bin/babel lib --out-dir dist",
     "clean": "git clean -fdx --exclude \"node_modules\" --exclude \"node-home-dir\"",
+    "package-lock": "git clean -fdx && npm install --save-exact && npx lerna exec \"npm install --package-lock-only --save-exact\" && ./scripts/install.sh",
     "test": "npm run build && npx lerna exec -- mocha"
-  }
+  },
+  "scripts-comments": [
+    "The package-lock script comes from ",
+    "https://github.com/lerna/lerna/issues/1415#issuecomment-455790478 .",
+    "Lerna may or may not update package-lock.json files. package-lock.json ",
+    "is not included in bundles posted to npm. Run the script after as the ",
+    "first commit after publishing."
+  ]
 }
