fix: use scoped packages
The following has a good application about why to use scoped
packages:
https://babeljs.io/blog/2017/12/27/nearing-the-7.0-release#renames-scoped-packages-babel-x

 * the difficulty of naming
 * package squatting
 * official packages vs. community packages

--- a/packages/utiljs-arrays/package.json
+++ b/packages/utiljs-arrays/package.json
@@ -18,7 +18,14 @@
     "utiljs"
   ],
   "license": "MIT",
-  "name": "utiljs-arrays",
+  "name": "@util.js/arrays",
+  "publishConfig": {
+    "access": "public"
+  },
+  "publishConfig-comments": [
+    "publishConfig is necessary to publish packages with a scope. See ",
+    "https://github.com/lerna/lerna/tree/master/commands/publish ."
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/creemama/utiljs/tree/master/packages/utiljs-arrays"
