--- a/packages/utiljs-numbers/package.json
+++ b/packages/utiljs-numbers/package.json
@@ -20,7 +20,14 @@
     "utiljs"
   ],
   "license": "MIT",
-  "name": "utiljs-numbers",
+  "name": "@util.js/numbers",
+  "publishConfig": {
+    "access": "public"
+  },
+  "publishConfig-comments": [
+    "publishConfig is necessary to publish packages with a scope. See ",
+    "https://github.com/lerna/lerna/tree/master/commands/publish ."
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/creemama/utiljs/tree/master/packages/utiljs-numbers"
