--- a/packages/utiljs-objects/package.json
+++ b/packages/utiljs-objects/package.json
@@ -16,7 +16,14 @@
     "utiljs"
   ],
   "license": "MIT",
-  "name": "utiljs-objects",
+  "name": "@util.js/objects",
+  "publishConfig": {
+    "access": "public"
+  },
+  "publishConfig-comments": [
+    "publishConfig is necessary to publish packages with a scope. See ",
+    "https://github.com/lerna/lerna/tree/master/commands/publish ."
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/creemama/utiljs/tree/master/packages/utiljs-objects"
