--- a/packages/utiljs-privates/package.json
+++ b/packages/utiljs-privates/package.json
@@ -10,7 +10,14 @@
     "privates"
   ],
   "license": "MIT",
-  "name": "utiljs-privates",
+  "name": "@util.js/privates",
+  "publishConfig": {
+    "access": "public"
+  },
+  "publishConfig-comments": [
+    "publishConfig is necessary to publish packages with a scope. See ",
+    "https://github.com/lerna/lerna/tree/master/commands/publish ."
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/creemama/utiljs/tree/master/packages/utiljs-privates"
