--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,9 @@ cache:
     - $HOME/.npm
     - node_modules
 
+# If you update the version of npm, update docker/Dockerfile too:
+# https://www.npmjs.com/package/npm
 before_install:
-  - npm install --global npm@6.1.0
+  - npm install --global npm@6.8.0
 
 install: ./scripts/install.sh
