--- a/packages/utiljs-files/package.json
+++ b/packages/utiljs-files/package.json
@@ -1,13 +1,13 @@
 {
   "author": "Chris Topher <c@creemama.com>",
   "dependencies": {
+    "@util.js/objects": "0.29.1",
+    "@util.js/promises": "0.29.1",
+    "@util.js/strings": "0.29.1",
     "mkdirp": "0.5.1",
     "ncp": "2.0.0",
     "rimraf": "2.6.3",
-    "touch": "3.1.0",
-    "@util.js/objects": "0.29.0",
-    "@util.js/promises": "0.29.0",
-    "@util.js/strings": "0.29.0"
+    "touch": "3.1.0"
   },
   "description": "JavaScript Node.js utility methods for files",
   "devDependencies": {
@@ -35,5 +35,5 @@
     "type": "git",
     "url": "https://github.com/creemama/utiljs/tree/master/packages/utiljs-files"
   },
-  "version": "0.29.0"
+  "version": "0.29.1"
 }
