chore: update the base-image version in docker/Dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,7 +3,7 @@
 
 # If you update this base image, update .travis.yml to match the base image's
 # npm version.
-FROM creemama/run-non-root:1.4.0-node-10.15.1-2
+FROM creemama/run-non-root:1.5.1-node
 
 # When upgrading versions for Alpine, run:
 # docker run -it --rm node:version-alpine sh
@@ -14,7 +14,7 @@ FROM creemama/run-non-root:1.4.0-node-10.15.1-2
 
 RUN apk --no-cache --update add \
       git=2.18.1-r0 \
-      openssh=7.7_p1-r3 \
+      openssh=7.7_p1-r4 \
  && run-non-root -- true
 
 USER node
