--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build": "npm run clean && ./scripts/babel.sh",
     "clean": "git clean -fdx --exclude \"node_modules\" --exclude \"node-home-dir\"",
     "package-lock": "git clean -fdx --exclude \"node-home-dir\" && npm install --save-exact && npx lerna exec \"npm install --package-lock-only --save-exact\" && ./scripts/install.sh",
-    "test": "npm run build && npx lerna exec --ignore \"@util.js/lerna\" -- mocha"
+    "test": "npm run build && npx lerna exec --ignore \"@util.js/lerna\" --ignore \"@util.js/aws\" -- mocha"
   },
   "scripts-comments": [
     "The package-lock script comes from ",
