docs: update the keywords in utiljs-privates/package.json

--- a/packages/utiljs-privates/package.json
+++ b/packages/utiljs-privates/package.json
@@ -10,7 +10,10 @@
     "member",
     "members",
     "private",
-    "privates"
+    "privates",
+    "utilities",
+    "utility",
+    "utiljs"
   ],
   "license": "MIT",
   "name": "@util.js/privates",
