build: update the utiljs-dev Docker image

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,8 +2,8 @@
 # ../scripts/docker.sh
 
 # If you update this base image, update .travis.yml to match the base image's
-# npm version.
-FROM creemama/run-non-root:1.5.1-node
+# npm version. Update the utiljs-dev version in ../scripts/docker.sh as well.
+FROM creemama/run-non-root:1.5.1-node-10.15.3
 
 # When upgrading versions for Alpine, run:
 # docker run -it --rm node:version-alpine sh
@@ -13,8 +13,8 @@ FROM creemama/run-non-root:1.5.1-node
 # https://pkgs.alpinelinux.org/packages .
 
 RUN apk --no-cache --update add \
-      git=2.18.1-r0 \
-      openssh=7.7_p1-r4 \
+      git=2.20.1-r0 \
+      openssh=7.9_p1-r4 \
  && run-non-root -- true
 
 USER node
