--- a/package.json
+++ b/package.json
@@ -7,14 +7,7 @@
     "@babel/plugin-transform-runtime": "7.3.4",
     "@babel/preset-env": "7.3.4",
     "@util.js/lerna": "file:packages/utiljs-lerna",
-    "chai": "4.2.0",
-    "eslint": "5.15.2",
-    "eslint-config-prettier": "4.1.0",
-    "jsdoc": "3.5.5",
-    "jsdoc-to-markdown": "4.0.1",
-    "lerna": "3.13.1",
-    "mocha": "6.0.2",
-    "prettier": "1.16.4"
+    "chai": "4.2.0"
   },
   "devDependencies-comments": [
     "Including @babel/core prevents the following warning: ",
