--- a/packages/utiljs-timers/package.json
+++ b/packages/utiljs-timers/package.json
@@ -1,6 +1,7 @@
 {
   "author": "Chris Topher <c@creemama.com>",
   "dependencies": {
+    "cron": "1.7.0",
     "@util.js/privates": "0.36.1"
   },
   "description": "An object to hold JavaScript timers: https://nodejs.org/api/timers.html",
