chore: call commands directly instead of calling npx

--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "url": "https://github.com/creemama/utiljs"
   },
   "scripts": {
-    "audit": "npx utiljs-lerna-audit",
+    "audit": "utiljs-lerna-audit",
     "build": "npm run clean && ./scripts/babel.sh",
     "clean": "git clean -fdx --exclude \"node_modules\"",
-    "package-lock": "git clean -fdx && npm install --save-exact && npx lerna exec \"npm install --package-lock-only --save-exact\" && ./scripts/install.sh",
-    "test": "npm run build && npx lerna exec --ignore \"@util.js/lerna\" --ignore \"@util.js/aws\" -- mocha"
+    "package-lock": "git clean -fdx && npm install --save-exact && lerna exec \"npm install --package-lock-only --save-exact\" && ./scripts/install.sh",
+    "test": "npm run build && lerna exec --ignore \"@util.js/lerna\" --ignore \"@util.js/aws\" -- mocha"
   },
   "scripts-comments": [
     "The package-lock script comes from ",
