--- a/packages/utiljs-privates/package.json
+++ b/packages/utiljs-privates/package.json
@@ -1,6 +1,7 @@
 {
   "author": "Chris Topher <c@creemama.com>",
   "dependencies": {
+    "@babel/runtime-corejs2": "7.4.3",
     "@util.js/errors": "0.37.0"
   },
   "description": "JavaScript utility class for private member variables",
