--- a/packages/utiljs-promises/package.json
+++ b/packages/utiljs-promises/package.json
@@ -1,8 +1,7 @@
 {
   "author": "Chris Topher <c@creemama.com>",
   "dependencies": {
-    "@babel/runtime-corejs2": "7.12.5",
-    "@util.js/arrays": "0.39.2"
+    "@babel/runtime-corejs2": "7.12.5"
   },
   "dependencies-comments": [
     "@babel/runtime-corejs2 is required by files in the dist directory to ",
