--- a/packages/utiljs-node-files/package.json
+++ b/packages/utiljs-node-files/package.json
@@ -26,7 +26,7 @@
     "utiljs"
   ],
   "license": "MIT",
-  "name": "@util.js/files",
+  "name": "@util.js/node-files",
   "publishConfig": {
     "access": "public"
   },
